--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint --report-unused-disable-directives",
     "prettify": "prettier --write",
     "preview": "vite preview",
     "prepare": "husky install",
-    "typecheck": "tsc --noEmit --jsx react-jsx"
+    "typecheck": "tsc --skipLibCheck --esModuleInterop true --noEmit --jsx react-jsx"
   },
   "dependencies": {
     "react": "^18.2.0",
