--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,7 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "jsx": "react-jsx"
   },
   "include": ["vite.config.ts"]
 }
